@@ -36,7 +36,8 @@ public class EmployeeSearchController extends BaseRBACController {
      */
     protected void processRequest(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
-            //read parameters
+        try {
+            //read parameters 
             String raw_id = request.getParameter("id");
             String raw_name = request.getParameter("name");
             String raw_gender = request.getParameter("gender");
@@ -45,26 +46,71 @@ public class EmployeeSearchController extends BaseRBACController {
             String raw_to = request.getParameter("to");
             String raw_did = request.getParameter("did");
 
-            //validate paramters
-            // SQL Injection, XSS, OS Command Injection , business Rules
-            //object binding
-            Integer id = (raw_id != null && !raw_id.isBlank()) ? Integer.parseInt(raw_id) : null;
-            String name = raw_name;
-            Boolean gender = (raw_gender != null) && !raw_gender.equals("both") ? raw_gender.equals("male") : null;
-            String address = raw_address;
-            Date from = (raw_from != null && !raw_from.isBlank()) ? Date.valueOf(raw_from) : null;
-            Date to = (raw_to != null && !raw_to.isBlank()) ? Date.valueOf(raw_to) : null;
-            Integer did = (raw_did != null && !raw_did.equals("-1")) ? Integer.parseInt(raw_did) : null;
+            //validate and convert parameters
+            Integer id = null;
+            if (raw_id != null && !raw_id.trim().isEmpty()) {
+                try {
+                    id = Integer.parseInt(raw_id);
+                } catch (NumberFormatException e) {
+                    // Handle invalid number format
+                }
+            }
+            String name = raw_name != null && !raw_name.trim().isEmpty() ? raw_name : null;
+            Boolean gender = raw_gender != null && !raw_gender.equals("both") ? raw_gender.equals("male") : null;
+            String address = raw_address != null && !raw_address.trim().isEmpty() ? raw_address : null;
 
+            Date from = null;
+            if (raw_from != null && !raw_from.trim().isEmpty()) {
+                try {
+                    from = Date.valueOf(raw_from);
+                } catch (IllegalArgumentException e) {
+                    // Handle invalid date format
+                }
+            }
+
+            Date to = null;
+            if (raw_to != null && !raw_to.trim().isEmpty()) {
+                try {
+                    to = Date.valueOf(raw_to);
+                } catch (IllegalArgumentException e) {
+                    // Handle invalid date format  
+                }
+            }
+
+            Integer did = null;
+            if (raw_did != null && !raw_did.equals("-1")) {
+                try {
+                    did = Integer.parseInt(raw_did);
+                } catch (NumberFormatException e) {
+                    // Handle invalid number format
+                }
+            }
+
+            //Get data from database
             EmployeeDAO dbEmp = new EmployeeDAO();
             DepartmentDAO dbDept = new DepartmentDAO();
             ArrayList<Employee> emps = dbEmp.search(id, name, gender, address, from, to, did);
-            request.setAttribute("emps", emps);
-
             ArrayList<Department> depts = dbDept.list();
+
+            //Set attributes for JSP
+            request.setAttribute("emps", emps);
             request.setAttribute("depts", depts);
 
+            //Keep search parameters for form
+            request.setAttribute("id", raw_id);
+            request.setAttribute("name", raw_name);
+            request.setAttribute("gender", raw_gender);
+            request.setAttribute("address", raw_address);
+            request.setAttribute("from", raw_from);
+            request.setAttribute("to", raw_to);
+            request.setAttribute("did", raw_did);
+
+            //Forward to JSP
             request.getRequestDispatcher("../view/employee/search.jsp").forward(request, response);
+
+        } catch (Exception e) {
+            response.getWriter().println("Error: " + e.getMessage());
+        }
     }
 
     @Override
